[package]
name = "fcoin-rust-sdk"
version = "0.2.1"
authors = ["gkrcknrl from FCoin Team <gkrcknrl@gmail.com>"]
homepage = "https://www.fcoin.com"
repository = "https://github.com/FCoinCommunity/fcoin-rust-sdk"
description = "FCoin rust SDK"
license = "MIT"

[dependencies]
reqwest = "0.8.5"
base64 = "0.9.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bigdecimal = "0.0.12"
num = "0.1"
hyper = "0.11"
time = "0.1"
hmac-sha1 = "^0.1"
hex-slice = "^0.1"

[lib]
name = "fcoin"
path = "src/lib.rs"